Split out encoding decoding logic for GRND blocks into a separate class, decoder functionality preserved.

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ pip-log.txt
 /buildSATools.exe
 /buildSATools.dll
 /buildSATools.deps.json
+/CommandLine/ArchiveTool/Properties/launchSettings.json
